--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,10 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://advaithbot.com/invite" class="btn">Invite</a>
+      <a href="https://advaithbot.com" class="btn">Website</a>
       <a href="https://discord.gg/WxPH3Fc" class="btn">Join Server</a>
-      <a href="https://discordbots.org/bot/398690824721924107" class="btn">Discord Bot List page</a>
-      <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      <a href="https://trello.com/b/9KhLPb1X" class="btn">Trello</a>
+      <a href="https://advaithbot.com/invite" class="btn">Add Bot</a>
+      <a href="{{ site.github.repository_url }}" class="btn">Site source</a>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
