--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
 {% seo %}
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
-    <meta name="theme-color" content="#157878">
+    <meta name="theme-color" content="#3498db">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" type="image/png" href="{{ site.favicon }}">
     <!-- ⚡ AMP -->
