--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
     <meta name="theme-color" content="#3498db">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" type="image/png" href="{{ site.favicon }}">
+    <link rel="shortcut icon" type="image/png" href="{{ site.image }}">
     <!-- ⚡ AMP -->
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
